2008-01-23  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/tools/gimprectangleselecttool.c
	(gimp_rect_select_tool_execute): Reset the automatic undo/redo
	mechanism so that commiting pending rectangles with Return
	works (bug #511599).

2008-01-23  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-selection.c: show the selection,
	even if the window is flagged as invisible, but don't start the
	animation. Addresses bug #505758.

2008-01-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c (about_dialog_create): use a run-time
	check for the GTK+ version instead of a compile time one.

2008-01-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_about.c: check for the GTK+ version and
	adjust the property name accordingly.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpprojection.c (gimp_projection_idle_render_init):
	decreased the priority of the projection idle renderer to 150,
	halfway between G_PRIORITY_HIGH_IDLE and G_PRIORITY_DEFAULT_IDLE.
	Fixes bug #511214.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/paint/gimpbrushcore.c (gimp_brush_core_create_bound_segs):
	smooth the brush mask in order to obtain a simpler boundary.
	Addresses bug #304798.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/imagemap/imap_csim.y: increased buffer size. Addresses
	bug #511072.

	* plug-ins/imagemap/imap_csim_parse.[ch]: regenerated.

2008-01-21  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/widgets/gimpcolorbar.c (gimp_color_bar_class_init): fix the
	ID of the "histogram-channel" property.

2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/base/lut-funcs.c (equalize_lut_fuct): Don't 
	equalize the alpha channel.  Fixes bug #510210.
	
2008-01-15  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:
